--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -1,4 +1,3 @@
-<cranix-toolbar></cranix-toolbar>
 <ion-content id="carded">
   <ion-row class="header-row">
     <ion-col size=6>
@@ -51,7 +50,7 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-     <ag-grid-angular nfIf="columnDefs"
+     <ag-grid-angular
         style="width: 100%; height: 100%;"
         class="{{authService.settings.agGridThema}}"
         [rowData]="proxyData"
