--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -9,10 +9,10 @@
         <ion-badge color="secondary" slot="end">118k</ion-badge>
       </ion-button>
       <ion-button fill="clear" (click)="retirectToSettings($event)" matTooltip="{{ 'Edit user preferences' | translate }}">
-        <ion-icon color="danger" name="person"></ion-icon>
+        <ion-icon color="success" name="person"></ion-icon>
       </ion-button>
       <ion-button  fill="clear" (click)="logOut($event)">
-        <ion-icon color="danger" name="walk"></ion-icon>
+        <ion-icon color="danger" name="log-out"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
