--- a/src/app/protected/cranix/security/security.page.html
+++ b/src/app/protected/cranix/security/security.page.html
@@ -13,7 +13,7 @@
       </ion-tab-button>
 
       <ion-tab-button tab="access">
-        <ion-icon name="access"></ion-icon>
+        <ion-icon name="key"></ion-icon>
         <ion-label>{{ 'Access' | translate}}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
