--- a/src/app/protected/cranix/security/firewall/firewall.component.html
+++ b/src/app/protected/cranix/security/firewall/firewall.component.html
@@ -39,18 +39,25 @@
             </ion-segment-button>
           </ion-segment>
         </ion-col>
-        <ion-col offset="3" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button *ngIf="segment == 'in'" size="small" (click)="applyIncomingRules()"
-            matTooltip="{{'Add outgoing rule.' | translate }}">
+        <ion-col offset="2" size="4" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
+          <ion-button size="small" (click)="applyChanges()" matTooltip="{{'Apply changes.' | translate }}">
             <ion-icon slot="icon-only" name="checkmark-sharp"></ion-icon>
           </ion-button>
           <ion-button *ngIf="segment == 'out'" size="small" (click)="addOutgoinRule()"
             matTooltip="{{'Add outgoing rule.' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
-          <ion-button *ngIf="segment == 'remote'" size="small" (click)="addForwardRule()"
+          <ion-button *ngIf="segment == 'out'" size="small" (click)="deleteOutgoinRule()"
+            matTooltip="{{'Delete outgoing rule.' | translate }}">
+            <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+          </ion-button>
+          <ion-button *ngIf="segment == 'remote'" size="small" (click)="addRemoteRule()"
             matTooltip="{{'Add remote access rule.' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+          </ion-button>
+          <ion-button *ngIf="segment == 'remote'" size="small" (click)="deleteRemoteRule()"
+            matTooltip="{{'Delete remote access rule.' | translate }}">
+            <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="restartFirewall()" matTooltip="{{'Restart firewall.' | translate }}">
             <ion-icon slot="icon-only" name="refresh-outline"></ion-icon>
@@ -62,7 +69,7 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ion-grid *ngIf="segment == 'in' && incoming">
+      <ion-grid *ngIf="segment == 'in' && securityService.incomingRules">
         <ion-row>
           <ion-col size=2>
             <ion-item>
@@ -71,8 +78,9 @@
           </ion-col>
           <ion-col size=2>
             <ion-item lines="none">
-              <ion-toggle slot="start" color="secondary" checked="{{incoming.ssh}}">
-              </ion-toggle>
+              <ion-checkbox slot="start" color="secondary" checked="{{securityService.incomingRules.ssh}}"
+                id="incoming-ssh">
+              </ion-checkbox>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -84,8 +92,9 @@
           </ion-col>
           <ion-col size=2>
             <ion-item lines="none">
-              <ion-toggle slot="start" color="secondary" checked="{{incoming.admin}}">
-              </ion-toggle>
+              <ion-checkbox slot="start" color="secondary" checked="{{securityService.incomingRules.admin}}"
+                id="incoming-admin">
+              </ion-checkbox>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -97,8 +106,9 @@
           </ion-col>
           <ion-col size=2>
             <ion-item lines="none">
-              <ion-toggle slot="start" color="secondary" checked="{{incoming.https}}">
-              </ion-toggle>
+              <ion-checkbox slot="start" color="secondary" checked="{{securityService.incomingRules.https}}"
+                id="incoming-https">
+              </ion-checkbox>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -108,10 +118,11 @@
               <ion-label>{{'rdesktop access' | translate}}</ion-label>
             </ion-item>
           </ion-col>
-          <ion-col size=10>
+          <ion-col size=9>
             <ion-item lines="none">
-              <ion-toggle slot="start" color="secondary" checked="{{incoming.rdesktop}}">
-              </ion-toggle>
+              <ion-checkbox slot="start" color="secondary" checked="{{securityService.incomingRules.rdesktop}}"
+                id="incoming-rdesktop">
+              </ion-checkbox>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -123,21 +134,23 @@
           </ion-col>
           <ion-col size=10>
             <ion-item>
-              <ion-input type="text" value="{{incoming.other}}" [(ngModel)]="incoming.other" name="other">
+              <ion-input type="text" value="{{securityService.incomingRules.other}}" id="incoming-other">
               </ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
       </ion-grid>
       <ag-grid-angular *ngIf="segment == 'out'" style="width: 100%; height: 100%;"
-        class="{{authService.settings.agGridThema}}" [rowData]="outData" [gridOptions]="outOptions" [context]="context"
-        rowSelection="multiple" (gridReady)="outGridReady($event)" (selectionChanged)="outSelectionChanged()"
+        class="{{authService.settings.agGridThema}}" [rowData]="securityService.outgoingRules"
+        [columnDefs]="outColumnDefs" [defaultColDef]="defaultColDef" [context]="context" rowSelection="multiple"
+        (gridReady)="outGridReady($event)" (selectionChanged)="outSelectionChanged()" [deltaColumnMode]="true"
         id="outGridTable">
       </ag-grid-angular>
       <ag-grid-angular *ngIf="segment == 'remote'" style="width: 100%; height: 100%;"
-        class="{{authService.settings.agGridThema}}" [rowData]="remoteData" [gridOptions]="remoteOptions"
-        [context]="context" rowSelection="multiple" (gridReady)="remoteGridReady($event)"
-        (selectionChanged)="remoteSelectionChanged()" id="outGridTable"></ag-grid-angular>
+        class="{{authService.settings.agGridThema}}" [rowData]="securityService.remoteRules"
+        [columnDefs]="remoteColumnDefs" [context]="context" rowSelection="multiple"
+        (gridReady)="remoteGridReady($event)" (selectionChanged)="remoteSelectionChanged()" id="remoteGridTable">
+      </ag-grid-angular>
     </ion-card-content>
   </ion-card>
 </ion-content>
