Fix some typos. Enhance translations.

--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -29,7 +29,7 @@
               <ion-label>{{'Basic configuration' | translate}}</ion-label>
             </ion-segment-button>
             <ion-segment-button value="positive">
-              <ion-label>{{'Positiv lists' | translate}}</ion-label>
+              <ion-label>{{'Positive lists' | translate}}</ion-label>
             </ion-segment-button>
           </ion-segment>
         </ion-col>
