--- a/src/app/protected/cranix/security/security.page.html
+++ b/src/app/protected/cranix/security/security.page.html
@@ -14,7 +14,7 @@
 
       <ion-tab-button tab="access">
         <ion-icon name="key"></ion-icon>
-        <ion-label>{{ 'Access' | translate}}</ion-label>
+        <ion-label>{{ 'Room access' | translate}}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
