--- a/src/app/protected/cranix/security/firewall/firewall.component.html
+++ b/src/app/protected/cranix/security/firewall/firewall.component.html
@@ -39,7 +39,7 @@
         <ion-col size="12" size-lg="6" size-xl="6">
           <ion-segment (ionChange)="segmentChanged($event)">
             <ion-segment-button value="in">
-              <ion-label class="hidden-xs hidden-sm">{{'Incomming rules' | translate}}</ion-label>
+              <ion-label class="hidden-xs hidden-sm">{{'Incoming rules' | translate}}</ion-label>
               <ion-icon name="log-in"></ion-icon>
             </ion-segment-button>
             <ion-segment-button value="out">
