Implementing add and delete room access rules.

--- a/src/app/protected/cranix/rooms/lists/rooms-lists.page.html
+++ b/src/app/protected/cranix/rooms/lists/rooms-lists.page.html
@@ -5,7 +5,7 @@
         <ion-label>{{ 'All rooms' | translate}}</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="adhoc">
-        <ion-icon name="adhoc"></ion-icon>
+        <ion-icon name="wifi"></ion-icon>
         <ion-label>{{ 'AdHoc rooms' | translate}}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
