Implementing actions for multiselected objects. Now customer can customize if he want to have multi click selection or not. First step to enable/disable check box selection.

--- a/src/app/protected/cranix/groups/details/members/group-members.page.html
+++ b/src/app/protected/cranix/groups/details/members/group-members.page.html
@@ -24,7 +24,7 @@
                 id="memberFilter"></ion-input>
             </ion-item>
             <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              [rowData]="memberData" [columnDefs]="columnDefs" rowSelection="multiple" rowMultiSelectWithClick="true" 
+              [rowData]="memberData" [columnDefs]="columnDefs" rowSelection="multiple" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" 
               (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable">
             </ag-grid-angular>
           </ion-col>
@@ -36,7 +36,7 @@
               </ion-input>
             </ion-item>
             <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              [rowData]="noMemberData" [columnDefs]="columnDefs" rowSelection="multiple" rowMultiSelectWithClick="true" 
+              [rowData]="noMemberData" [columnDefs]="columnDefs" rowSelection="multiple" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" 
               (gridReady)="onNoMemberReady($event)" (selectionChanged)="onNoMemberSelectionChanged()"
               id="noMemberTable">
             </ag-grid-angular>
