--- a/src/global.scss
+++ b/src/global.scss
@@ -54,6 +54,13 @@
   }
 }
 
+ion-content ion-segment {
+  margin: 5px 0;
+}
+
+/* ion-segment-button {
+  background-color: lightgrey;
+} */
 /*
 :root {
   ion-tab-button.tab-selected {
