--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -53,7 +53,9 @@
     <ion-card-content>
       <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
         [gridOptions]="gridOptions" [rowData]="rowData" [columnDefs]="columnDefs" [context]="context"
-        [rowSelection]="rowSelection" (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()"
+        rowSelection="multiple"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+	(gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()"
         id="agGridTable">
       </ag-grid-angular>
     </ion-card-content>
