--- a/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
+++ b/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
@@ -22,7 +22,9 @@
     <ion-card-content>
       <ag-grid-angular #agGrid style="width: 100%; height: 450px;" class="{{authService.settings.agGridThema}}"
         [gridOptions]="memberOptions" [rowData]="memberData" [columnDefs]="columnDefs" [context]="context"
-        [rowSelection]="memberSelection" (gridReady)="onMemberReady($event)"
+        rowSelection="multiple"
+	[rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+        (gridReady)="onMemberReady($event)"
         (selectionChanged)="onMemberSelectionChanged()" id="memberTable" [autoGroupColumnDef]="autoGroupColumnDef">
       </ag-grid-angular>
     </ion-card-content>
