--- a/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
@@ -43,7 +43,9 @@
     </ion-card-header>
     <ion-card-content>
       <ag-grid-angular #agGrid style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}" [gridOptions]="memberOptions"
-        [rowData]="memberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="memberSelection"
+        [rowData]="memberData" [columnDefs]="columnDefs" [context]="context"
+        rowSelection="multiple"
+	[rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable"
         [autoGroupColumnDef]="autoGroupColumnDef">
       </ag-grid-angular>
