--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -1,3 +1,4 @@
+<cranix-toolbar></cranix-toolbar>
 <ion-content id="carded">
   <ion-row class="header-row">
     <ion-col size=6>
@@ -24,7 +25,7 @@
     <ion-card-header>
       <ion-row>
         <ion-col size="12" size-lg="6" size-xl="6">
-          <ion-segment (ionChange)="segmentChanged($event)">
+          <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="basic">
             <ion-segment-button value="basic">
               <ion-label>{{'Basic configuration' | translate}}</ion-label>
             </ion-segment-button>
@@ -57,6 +58,7 @@
         [gridOptions]="proxyOptions" 
         [columnDefs]="columnDefs"
         [context]="context"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         rowSelection="multiple"
         (gridReady)="proxyGridReady($event)"
         (selectionChanged)="proxySelectionChanged()"
