--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -1,3 +1,4 @@
+<cranix-toolbar></cranix-toolbar>
 <ion-content id=carded>
   <ion-row class="header-row">
     <ion-col size=6>
@@ -21,7 +22,7 @@
     <ion-card-header>
       <ion-row>
         <ion-col size="12" size-lg="6" size-xl="6">
-          <ion-segment (ionChange)="segmentChanged($event)">
+          <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="list">
             <ion-segment-button value="list">
               <ion-label>{{'Room access rules' | translate}}</ion-label>
             </ion-segment-button>
@@ -55,7 +56,7 @@
         id="accessGridTable"
         class="{{authService.settings.agGridThema}}"
         [modules]="modules"
-        rowMultiSelectWithClick="true"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         rowSelection="multiple"
         [columnDefs]="columnDefs"
         [defaultColDef]="defaultColDef"
