--- a/src/app/protected/cranix/users/details/groups/user-groups.page.html
+++ b/src/app/protected/cranix/users/details/groups/user-groups.page.html
@@ -39,7 +39,7 @@
               </ion-input>
             </ion-item>
             <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-              [rowData]="noMemberData" [columnDefs]="columnDefs"  rowMultiSelectWithClick="true" 
+              [rowData]="noMemberData" [columnDefs]="columnDefs"  [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" 
               rowSelection="multiple" (gridReady)="onNoMemberReady($event)"
               (selectionChanged)="onNoMemberSelectionChanged()" id="noMemberTable">
             </ag-grid-angular>
