--- a/src/app/shared/actions/actions.component.html
+++ b/src/app/shared/actions/actions.component.html
@@ -4,7 +4,7 @@
     <div *ngFor="let item of menu">
       <ion-item button  *ngIf="item.enabled" (click)="messages(item.action)">
         <!--ion-avatar-->
-          <ion-icon slot="start" size="small" name="{{ item.icon }}"></ion-icon>
+          <ion-icon slot="start" size="small" color="{{item.color}}" name="{{ item.icon }}"></ion-icon>
         <!--/ion-avatar-->
         <ion-label>{{ item.action | translate }}</ion-label>
       </ion-item>
