--- a/src/app/shared/actions/download-softwares/download-softwares.component.html
+++ b/src/app/shared/actions/download-softwares/download-softwares.component.html
@@ -20,7 +20,7 @@
       style="width: 100%; height: 90%;"
       class="ag-theme-material"
       rowSelection="multiple"
-      rowMultiSelectWithClick="true"
+      [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
       [rowData]="objectService.packagesAvailable"
       [columnDefs]="columns"
       (gridReady)="tableReady($event)"
