--- a/src/app/protected/cranix/system/config/system-config.component.html
+++ b/src/app/protected/cranix/system/config/system-config.component.html
@@ -11,7 +11,7 @@
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-segment (ionChange)="segmentChanged($event)">
+      <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="Basic">
         <ion-segment-button value="Basic">
           <ion-label>{{'Base configuration' | translate}}</ion-label>
         </ion-segment-button>
