Implementing setting passwort via applyAction.

--- a/src/app/shared/actions/actions.component.html
+++ b/src/app/shared/actions/actions.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content translucent>
   <ion-list-header> # {{'Selected Items: ' | translate }} {{ count }}</ion-list-header>
   <ion-list>
     <div *ngFor="let item of menu">
