added structure of edu module, and room-control page

--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -117,6 +117,12 @@ $breakpoints-values: map-values($grid-breakpoints);
  * layout for carded-pages
  *
  */
+#roomcontrol{
+  ion-content{
+    padding-top: 60px;
+  }
+ 
+}
 
 #carded {
   margin-top  : 5px;
