Fix translations. Show customer only if acl customer.manage does exists.

--- a/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
+++ b/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
@@ -25,19 +25,19 @@
               <ion-icon slot="icon-only" name="refresh"></ion-icon>
             </ion-button>
             <ion-button size="small" fill="clear" (click)="writeConfig()"
-              matTooltip="{{'Write configuration and create installation image.' | translate }}">
+              matTooltip="{{'Write configuration and create installation image' | translate }}">
               <ion-icon slot="icon-only" name="server"></ion-icon>
             </ion-button>
             <ion-button size="small" fill="clear" href="/isos/{{isourl}}.iso"
-              matTooltip="{{'Download the installation image.' | translate }}">
+              matTooltip="{{'Download the installation image' | translate }}">
               <ion-icon slot="icon-only" name="arrow-down-circle"></ion-icon>
             </ion-button>
             <ion-button size="small" fill="clear" href="/configs/{{isourl}}full-connect.sh"
-              matTooltip="{{'Download the setup script.' | translate }}">
+              matTooltip="{{'Download the setup script' | translate }}">
               <ion-icon slot="icon-only" name="download"></ion-icon>
             </ion-button>
             <ion-button size="small" fill="clear" (click)="delete($event)"
-              matTooltip="{{'Delete institute.' | translate }}">
+              matTooltip="{{'Delete institute' | translate }}">
               <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
             </ion-button>
           </ion-col>
