--- a/src/app/protected/cranix/softwares/softwares.page.html
+++ b/src/app/protected/cranix/softwares/softwares.page.html
@@ -12,7 +12,7 @@
         <ion-label>{{ 'Installation status' | translate}}</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button tab="packages">
+      <ion-tab-button *ngIf="authService.isAllowed('software.download')"  tab="packages">
         <ion-icon name="create"></ion-icon>
         <ion-label>{{ 'Packages' | translate}}</ion-label>
       </ion-tab-button>
