--- a/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
+++ b/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
@@ -20,12 +20,17 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular #agGrid style="width: 100%; height: 450px;" class="{{authService.settings.agGridThema}}"
-        [gridOptions]="memberOptions" [rowData]="memberData" [columnDefs]="columnDefs" [context]="context"
+      <ag-grid-angular #agGrid
+        style="width: 100%; height: 450px;"
+        class="{{authService.settings.agGridThema}}"
+        [rowData]="memberData"
+        [columnDefs]="columnDefs"
+        [autoGroupColumnDef]="autoGroupColumnDef"
+        [context]="context"
         rowSelection="multiple"
-	[rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (gridReady)="onMemberReady($event)"
-        (selectionChanged)="onMemberSelectionChanged()" id="memberTable" [autoGroupColumnDef]="autoGroupColumnDef">
+        id="memberTable">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
