--- a/src/app/protected/cranix/softwares/status/software-status.component.html
+++ b/src/app/protected/cranix/softwares/status/software-status.component.html
@@ -21,12 +21,18 @@ showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular #agGrid style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}" [gridOptions]="memberOptions"
-        [rowData]="memberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="memberSelection"
-        (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable"
-        [rowGroupPanelShow]="rowGroupPanelShow"
+      <ag-grid-angular #agGrid
+        id="softwareStatusTable"
+        style="width: 100%; height: 100%;"
+        class="{{authService.settings.agGridThema}}"
+        [gridOptions]="memberOptions"
+        [rowData]="memberData"
+        [columnDefs]="columnDefs"
+        [context]="context"
+        rowSelection="multiple"
+        (gridReady)="onMemberReady($event)"
         [autoGroupColumnDef]="autoGroupColumnDef"
-	[rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick">
+	      [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
